turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:29: warning: patterns after a variable pattern cannot match (SLS 8.1.1)
If you intended to match against value stop in class Turmite, you must use backticks, like: case `stop` =>
    case stop => useless=0
         ^Turmite:30: warning: unreachable code due to variable pattern 'stop' on line 47
If you intended to match against value novirage in class Turmite, you must use backticks, like: case `novirage` =>
    case novirage => avance()
                           ^Turmite:31: warning: unreachable code due to variable pattern 'stop' on line 47
If you intended to match against value left in class Turmite, you must use backticks, like: case `left` =>
    case left => gauche()
                       ^Turmite:32: warning: unreachable code due to variable pattern 'stop' on line 47
If you intended to match against value demi in class Turmite, you must use backticks, like: case `demi` =>
    case demi => retourne()
                         ^Turmite:33: warning: unreachable code due to variable pattern 'stop' on line 47
If you intended to match against value right in class Turmite, you must use backticks, like: case `right` =>
    case right => droite()
                        ^Turmite:30: warning: unreachable code
    case novirage => avance()
                           ^Turmite:30: warning: unreachable code
    case novirage => avance()
                           ^Turmite:9: error: overriding method left in class AbstractBuggle of type ()Unit;
 value left needs `override' modifier
val left = 2
    ^Turmite:11: error: overriding method right in class AbstractBuggle of type ()Unit;
 value right needs `override' modifier
val right = 8
    ^